better image quality on mobile small css fixes

--- a/css/layout.css
+++ b/css/layout.css
@@ -2,9 +2,25 @@
 
 @media only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
     .dragimg img {
-        width:50%;
-        height:50%;
+        /*width:50%;*/
+        /*height:50%;*/
+
+        -webkit-transform: scale(0.5);
+        -moz-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+        -o-transform: scale(0.5);
+        transform: scale(0.5);
+        filter: progid:DXImageTransform.Microsoft.Matrix(M11=0.9999619230641713, M12=-0.008726535498373935, M21=0.008726535498373935, M22=0.9999619230641713,SizingMethod='auto expand');
+
+        -ms-transform-origin: 0% 0%;
+        -webkit-transform-origin: 0% 0%;
+        transform-origin: 0% 0%;
+
     }
+    /*.dragimg.mapobject img {*/
+        /*width:100%;*/
+        /*height:100%;*/
+    /*}*/
 }
 
 #overlay{
@@ -35,17 +51,24 @@ padding:10px;}
     left:30px;
     z-index: 951;
 }
+
 .contactbutton div{
     float:left;
 }
 .contactbutton .button{
     position:relative;
-    top: 12px;
+    top: 6px;
 }
 .contactbutton .text{
-    padding:8px;
+    margin-left:8px;
     font-size:18px;
+    padding: 0;
 }
+
+.contactbutton .text a:hover{
+    border-bottom: 2px solid rgba(255, 255, 255, 1);
+}
+
 .contactbutton a{
     color: white !important;
 }
@@ -70,7 +93,12 @@ padding:10px;}
 
 #dow{top: -185px;z-index:0;}
 
-#goup{font-size:24px;text-align:center;display:none;z-index:1100;margin:0;left:50%;width:300px;margin-left:-150px;position:fixed;top:50px;cursor:pointer;}
+#goup{font-size:24px;text-align:center;display:none;z-index:1100;margin:0;left:50%;width:272px;margin-left:-136px;position:fixed;top:50px;cursor:pointer;}
+
+#goup:hover{
+    border-bottom: 3px solid rgba(255, 255, 255, 1);
+    padding-bottom: 8px;
+}
 
 #mobintro{text-align:left!important;line-height:22px;width: 290px;
 margin-left: -145px;left: 50%;position: relative;top: -20px;font-size: 19px;}
@@ -187,13 +215,19 @@ margin-left: -145px;left: 50%;position: relative;top: -20px;font-size: 19px;}
 footer {
     width:100%;
     background-color: black;
+    font-size:13px;
 }
 
-pre{
-    padding-left: 30px !important;
+footer a {
+    color: white;
+}
+
+footer p{
+    display:block;
+    margin-bottom:4px;
+    padding-left: 16px !important;
     line-height: 15px;
 }
-.leftreg{font-size:13px;}
 
 .threedee {
      font-family: "SofiaProSemiBold";
